...
            Button("Export Preferences...") {
                NotificationCenter.default.post(name: .showExportPreferences, object: nil)
            }
        }

        CommandGroup(replacing: .printItem) {
            Menu("Print") {
                Button("Formatted...") {
                    NotificationCenter.default.post(name: .printFormatted, object: nil)
                }
                .keyboardShortcut("p", modifiers: .command)
                .disabled(ExportActivity.shared.isRunning)

...
            let alert = NSAlert()
            alert.messageText = "Do you want to save changes before closing?"
            alert.informativeText = "Your changes will be lost if you don't save them."
            alert.alertStyle = .warning
            alert.addButton(withTitle: "Save")
            alert.addButton(withTitle: "Don't Save")
            alert.addButton(withTitle: "Cancel")

            let response = alert.runModal()
            switch response {
            case .alertFirstButtonReturn:
                // Save then close
                handleSaveProject()
...
